tests/errors/semantics/cannot_use_float_for_array_size.odl
main :: () -> void  {
    y := 1.6;
    arr := [y]int;
};